Prevent overscroll bounce on mobile

--- a/theme/css/style.scss
+++ b/theme/css/style.scss
@@ -3,6 +3,10 @@ html, body {
   margin: 0;
 }
 
+html {
+  overflow: hidden;
+}
+
 iframe {
   width: 100%;
   height: 100%;
